In index.html: added the h2 and ul to the top of the page as a table header; In styles.css: added font size and family in the csv_preview-section; In main.js: added regular expression definitions for date formating and fixed the numbers in quotes, fixed the last shelf life column not showing, added formatsDueDate and formatLongDate functions, added statusColumnIndex checker to make sure the index is correct, added the rule for removing the colums with status Complete and unified the camel case for variables in the filteredDataToBrowser function.

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,8 @@
   margin:  0 auto;
   padding: 2em;
   width: 100%;
+  font-family: Calibri, sans-serif;
+  font-size: 1.125em;
 }
 
 .table-container {
@@ -13,6 +15,7 @@
   padding: 2em;
   width: 90%;
   background-color: aquamarine;
+  
 }
 
 #loaded_csv_data_table {
